spec/e2e/field/get_on_type.lit
type Foo {}
Foo.bar; # error: [line 2] Only instances have properties.
